--- a/style.css
+++ b/style.css
@@ -73,3 +73,22 @@
   opacity: 1;
   pointer-events: auto;
 }
+
+.form {
+  background: #fff;
+  max-width: 600px;
+  width: 100%;
+  margin: 60px auto;
+  padding: 25px;
+  border-radius: 5px;
+  box-shadow: 0px 10px 15px rgba(0,0,0,0.1);
+}
+
+.form header {
+    font-size: 30px;
+    font-weight: 600;
+}
+
+.form body {
+    
+}
